# commerce-agent-mvp

./: .gitignore  README.md  app.py  pyproject.toml
agents/commerce/: __init__.py  config.py  flow.py
agents/commerce/adapters/: __init__.py  acp_client.py  map_token.py  stripe.py  tap_signer.py
agents/commerce/guards/: __init__.py  injection.py  mandate.py  pii_shield.py
cli/: main.py
core/: audit.py  authority.py  governance.py  mcp_server.py  protocol_adapter.py  session.py  state_machine.py  types.py
static/: index.html
tests/: conftest.py  test_audit.py  test_authority.py  test_commerce_flow.py  test_governance.py  test_state_machine.py
trustx-agent/: pyproject.toml
trustx-agent/agents/commerce/: personas.py
trustx-agent/cli/: main.py
