[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trustx-agent"
version = "1.0.0"
description = "TrustX Mother Agent Framework – domain-agnostic agent orchestration with governance, audit, and MCP"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "mcp>=1.0",
    "click>=8.0",
    "cryptography>=41.0",
    "httpx>=0.25",
    "stripe>=7.0",
    "structlog>=23.0",
    "rich>=13.0",
    "fastapi>=0.111",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[project.scripts]
trustx = "cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["core", "agents", "cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.metadata]
allow-direct-references = true
